MODSOURCE-817: Fix data consistency in handling and updating Marc Bib records for links.instance-authority event (#652)
MODSOURCE-817: Fix data consistency in handling and updating Marc Bib records for links.instance-authority event

- make the handling of events for instance-authority links so that no Marc Bib modifications from are lost due to concurrent nature of handling events
- make sure the event of the first in a sequence of updates sent by the producer and then received by the consumer is handled before with persisting the changes of related bibs than the events produced/consumed later

Closes: MODSOURCE-817

(cherry picked from commit 43120f479f9640165b412128cace7c05bc5d56f5)