@@ -12,7 +12,6 @@ import static org.junit.Assert.assertThrows;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import io.reactivex.Flowable;
-import io.vertx.core.AsyncResult;
 import io.vertx.core.CompositeFuture;
 import io.vertx.core.Future;
 import io.vertx.core.json.JsonArray;
@@ -63,7 +62,6 @@ import org.folio.rest.jaxrs.model.RecordCollection;
 import org.folio.rest.jaxrs.model.RecordsBatchResponse;
 import org.folio.rest.jaxrs.model.Snapshot;
 import org.folio.rest.jaxrs.model.SourceRecord;
-import org.folio.rest.jaxrs.model.SourceRecordCollection;
 import org.folio.rest.jaxrs.model.StrippedParsedRecord;
 import org.folio.rest.jooq.enums.RecordState;
 import org.folio.services.domainevent.RecordDomainEventPublisher;
@@ -149,7 +147,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
           .filter(r -> r.getSnapshotId().equals(snapshotId))
           .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.get(1), get.result().getRecords().get(0));
         compareRecords(context, expected.get(2), get.result().getRecords().get(1));
@@ -415,7 +413,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
         .filter(r -> r.getSnapshotId().equals(snapshotId))
         .sorted(comparing(Record::getOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       List<Record> actual = new ArrayList<>();
       flowable.doFinally(() -> {
@@ -1632,7 +1630,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(Record.RecordType.MARC_BIB))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         context.assertEquals(limit, get.result().getRecords().size());
         async.complete();
@@ -1662,7 +1660,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
           .filter(r -> r.getRecordType().equals(recordType))
           .filter(r -> r.getSnapshotId().equals(snapshotId))
           .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected.get(0), get.result().getRecords().get(0));
         async.complete();
@@ -1690,8 +1688,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         List<Record> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
-          .sorted(comparing(Record::getOrder))
-          .collect(Collectors.toList());
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareRecords(context, expected, get.result().getRecords());
         async.complete();
@@ -1719,7 +1716,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         .filter(r -> r.getRecordType().equals(recordType))
         .filter(r -> r.getSnapshotId().equals(snapshotId))
         .sorted(comparing(Record::getOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       List<Record> actual = new ArrayList<>();
       flowable.doFinally(() -> {
@@ -1823,8 +1820,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      expected.sort(comparing(Record::getId));
-      batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       RecordDaoUtil.countByCondition(postgresClientFactory.getQueryExecutor(TENANT_ID), DSL.trueCondition())
         .onComplete(count -> {
@@ -1854,8 +1849,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       }
       context.assertEquals(0, batch.result().getErrorMessages().size());
       context.assertEquals(expected.size(), batch.result().getTotalRecords());
-      expected.sort(comparing(Record::getId));
-      batch.result().getRecords().sort(comparing(Record::getId));
       compareRecords(context, expected, batch.result().getRecords());
       checkRecordErrorRecords(context, batch.result().getRecords(), TestMocks.getErrorRecord(0).getContent().toString(),
         TestMocks.getErrorRecord(0).getDescription());
@@ -1898,9 +1891,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -1927,14 +1918,10 @@ public class RecordServiceTest extends AbstractLBServiceTest {
       List<SourceRecord> expected = records.stream()
         .filter(r -> r.getRecordType().equals(recordType))
         .map(RecordDaoUtil::toSourceRecord)
-        .sorted(comparing(SourceRecord::getRecordId))
-        .sorted(comparing(SourceRecord::getOrder))
-        .collect(Collectors.toList());
+        .toList();
 
       List<SourceRecord> actual = new ArrayList<>();
       flowable.doFinally(() -> {
-
-          actual.sort(comparing(SourceRecord::getRecordId));
           context.assertEquals(expected.size(), actual.size());
           compareSourceRecords(context, expected, actual);
 
@@ -1968,18 +1955,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        sortByRecordId(get);
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
       });
     });
-  }
-
-  private void sortByRecordId(AsyncResult<SourceRecordCollection> get) {
-    get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
   }
 
   private void getMarcSourceRecordsBetweenDates(TestContext context, Record.RecordType recordType,
@@ -2004,9 +1985,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -2059,9 +2038,7 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         List<SourceRecord> expected = records.stream()
           .filter(r -> r.getRecordType().equals(recordType))
           .map(RecordDaoUtil::toSourceRecord)
-          .sorted(comparing(SourceRecord::getRecordId))
-          .collect(Collectors.toList());
-        get.result().getSourceRecords().sort(comparing(SourceRecord::getRecordId));
+          .toList();
         context.assertEquals(expected.size(), get.result().getTotalRecords());
         compareSourceRecords(context, expected, get.result().getSourceRecords());
         async.complete();
@@ -2133,8 +2110,6 @@ public class RecordServiceTest extends AbstractLBServiceTest {
         }
         context.assertEquals(0, update.result().getErrorMessages().size());
         context.assertEquals(expected.size(), update.result().getTotalRecords());
-        expected.sort(comparing(ParsedRecord::getId));
-        update.result().getParsedRecords().sort(comparing(ParsedRecord::getId));
         compareParsedRecords(context, expected, update.result().getParsedRecords());
         GenericCompositeFuture.all(updated.stream().map(record -> recordDao
           .getRecordByMatchedId(record.getMatchedId(), TENANT_ID)
@@ -2283,7 +2258,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareRecords(TestContext context, List<Record> expected, List<Record> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (Record record : expected) {
-      compareRecords(context, record, record);
+      var actualRecord = actual.stream()
+        .filter(r -> Objects.equals(r.getId(), record.getId()))
+        .findFirst();
+      if (actualRecord.isPresent()) {
+        compareRecords(context, record, actualRecord.get());
+      }
     }
   }
 
@@ -2348,7 +2328,12 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareSourceRecords(TestContext context, List<SourceRecord> expected, List<SourceRecord> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (SourceRecord sourceRecord : expected) {
-      compareSourceRecords(context, sourceRecord, sourceRecord);
+      var sourceRecordActual = actual.stream()
+        .filter(sr -> Objects.equals(sr.getRecordId(), sourceRecord.getRecordId()))
+        .findFirst();
+      if (sourceRecordActual.isPresent()) {
+        compareSourceRecords(context, sourceRecord, sourceRecordActual.get());
+      }
     }
   }
 
@@ -2381,7 +2366,10 @@ public class RecordServiceTest extends AbstractLBServiceTest {
   private void compareParsedRecords(TestContext context, List<ParsedRecord> expected, List<ParsedRecord> actual) {
     context.assertEquals(expected.size(), actual.size());
     for (ParsedRecord parsedRecord : expected) {
-      compareParsedRecords(context, parsedRecord, parsedRecord);
+      var actualParsedRecord = actual.stream().filter(a -> Objects.equals(a.getId(), parsedRecord.getId())).findFirst();
+      if (actualParsedRecord.isPresent()) {
+        compareParsedRecords(context, parsedRecord, actualParsedRecord.get());
+      }
     }
   }
 
